tests/neg-custom-args/captures/cc-fresh-levels.check
Flag -source set repeatedly
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-fresh-levels.scala:14:10 ------------------------------
14 |    r.put(x)  // error
   |          ^
   |          Found:    IO^{x}
   |          Required: IO^
   |
   |          where:    ^ refers to a fresh root capability in the type of value r
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-fresh-levels.scala:17:10 ------------------------------
17 |    r.put(innerIO)  // error
   |          ^^^^^^^
   |          Found:    IO^{innerIO}
   |          Required: IO^
   |
   |          where:    ^ refers to a fresh root capability in the type of value r
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-fresh-levels.scala:18:9 -------------------------------
18 |  runIO: innerIO =>  // error
   |         ^
   |Found:    (innerIO: IO^?) ->? Unit
   |Required: IO^ => Unit
   |
   |where:    => refers to a fresh root capability created in method test1 when checking argument to parameter op of method runIO
   |          ^  refers to the universal root capability
19 |    r.put(innerIO)
   |
   | longer explanation available when compiling with `-explain`
